--- a/difficultJS/index.html
+++ b/difficultJS/index.html
@@ -15,6 +15,6 @@
 <body>
     <h1 class="title">Difficult js</h1>
 
-<script src="src/promises.js"></script>
+<script src="src/05_promises.js"></script>
 </body>
 </html>
